# gitparser

./: .gitignore  gitparser.cabal  gitparser.hs
src/Data/: GitParser.hs
src/Data/GitParser/: Parser.hs  Repo.hs  Types.hs
